# libobject

./: .gitignore  README.md  configure.ac  object.c  object.h
src/: Makefile.am  libobjectconfig.h.in  main  main.c  mm.c  mm.h  murmurhash3.c  object.c  object.h  object_mm.c  object_mm.h
src/test/: build  stringSplit.c
test/: Makefile.am  libObjectVersion.c  map.c  mapSearchEx.c  newDouble.c  newFunction.c  newLong.c  newNumberFromCharArray  newNumberFromCharArray.c  newPair.c  newPointer.c  newString.c  objectToJson.c  objectToString.c  objectTypeStr.c  objectValueCompare.c  objectValueIsLessThan.c  objectValueTypeCompare.c  stringCat.c  test_common.h
