LDADD = $(top_builddir)/src/libobject.la

noinst_HEADERS = \
	test_common.h		\
	$(NULL)

noinst_PROGRAMS = \
	newNumberFromCharArray	\
	newString		\
	objectToString		\
	newLong			\
	newDouble		\
	newFunction		\
	objectToJson		\
	newPair			\
	objectValueTypeCompare  \
	objectValueCompare      \
	mapSearchEx      	\
	objectValueIsLessThan   \
	stringCat      		\
	libObjectVersion \
	newPointer	\
	$(NULL)

check_PROGRAMS = \
	newNumberFromCharArray	\
	newString		\
	objectToString		\
	newLong			\
	newDouble		\
	newFunction		\
	objectToJson		\
	newPair			\
	objectValueTypeCompare  \
	mapSearchEx		\
	stringCat      		\
	objectValueCompare      \
	objectValueIsLessThan   \
	libObjectVersion \
	newPointer \
	$(NULL)

TESTS = $(check_PROGRAMS)
